@@ -23,6 +23,7 @@
 #include "gnome-cmd-file-list.h"
 #include "gnome-cmd-file.h"
 #include "gnome-cmd-data.h"
+#include "gnome-cmd-main-win.h"
 
 using namespace std;
 
@@ -144,10 +145,23 @@ on_key_pressed                      (GtkWidget *entry,
     {
         case GDK_Escape:
         case GDK_Return:
-            gnome_cmd_file_list_select_row (
-                popup->priv->fl, GNOME_CMD_CLIST (popup->priv->fl)->drag_motion_row);
+            gnome_cmd_file_list_select_row (popup->priv->fl, GNOME_CMD_CLIST (popup->priv->fl)->drag_motion_row);
             hide_popup (popup);
             return TRUE;
+
+        // for more convenience jump direct to Fx function on the current quicksearch item
+        case GDK_F3:
+        case GDK_F4:
+        case GDK_F5:
+        case GDK_F6:
+        case GDK_F8:
+            gnome_cmd_file_list_select_row (popup->priv->fl, GNOME_CMD_CLIST (popup->priv->fl)->drag_motion_row);
+            hide_popup (popup);
+            gnome_cmd_main_win_keypressed (main_win, event);
+            return TRUE;
+
+        default:
+            break;
     }
 
     return FALSE;
